--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -481,3 +481,106 @@ footer .footer-below {
   height: 80px;
   width: 100px;
 }
+
+#modal-container {
+  background-color: rgba(0, 0, 0, 0);
+  height: 100%;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  color: #344a61;
+  z-index: -1050;
+  transition: background-color 1s ease;
+  &.show {
+   background-color: rgba(0, 0, 0, 0.5);
+   z-index: 1050;
+   #modal-box {
+    transform: translateY(-50%)  scale(1)
+   }
+ }
+}
+
+
+#modal-box {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  border: 5px solid #344a61;
+  margin: 0 auto;
+  padding-bottom: 10px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%) scale(0);
+  width: 480px;
+  transition: all 1s ease;
+}
+
+
+ // SEND MESSAGE BUTTON
+ #modal-show{
+  display: inline-block;
+  text-align: center;
+  font-size: 20px;
+  font: 'Open Sans', Helvetica, Arial, sans-serif;
+  color: white;
+  background: rgba(0,0,0,0);
+  border: solid 5px white;
+  transition: border .9s ease, color .5s ease;
+  &:hover {
+    border-color: $primary;
+    color: $primary;
+  }
+  &:active, &:focus {
+    border-color: #344a61;
+    color: #344a61;
+    outline: none;
+  }
+}
+
+#modal-hide {
+  background: white;
+  border-radius: 15px;
+  color: #344a61;
+  display: block;
+  float: right;
+  font-family: monospace;
+  font-size: 15px;
+  margin-right: -17px;
+  position: relative;
+  top: -18px;
+  width: 30px;
+  &:focus {
+    outline: none;
+  }
+}
+
+
+textarea {
+  text-align: margin-left;
+  height: 250px;
+  width: 250px;
+}
+
+::-webkit-input-placeholder {
+  text-align: center;
+}
+
+#sendButton{
+  display: inline-block;
+  text-align: center;
+  font-size: 20px;
+  font: 'Open Sans', Helvetica, Arial, sans-serif;
+  color: #344a61;
+  background: rgba(0,0,0,0);
+  border: solid 5px #344a61;
+  transition: border .9s ease, color .5s ease;
+  &:hover {
+    border-color: $primary;
+    color: $primary;
+  }
+  &:active, &:focus {
+    border-color: #344a61;
+    color: #344a61;
+    outline: none;
+  }
+}
